--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
-version: '3.8'
+version: "3.8"
 services:
   api:
-    mem_limit: 4g
+    mem_limit: 6g
     cpus: 2
     build: .
     ports:
-      - "8890:80"  #localhost port : container exposed port
+      - "8890:80" #localhost port : container exposed port
     working_dir: /app/
     deploy:
       resources:
